Fixed highlight in dark mode

--- a/themes/lesswrong.css
+++ b/themes/lesswrong.css
@@ -2015,7 +2015,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --bc-highlight: 	var(--cl-green-500);
+    --bc-highlight: 	var(--cl-green-800);
   }
 }
 
