--- a/themes/lesswrong_dark.css
+++ b/themes/lesswrong_dark.css
@@ -898,7 +898,7 @@
 }
 
 :root {
-  --bc-highlight: 	var(--cl-green-500);
+  --bc-highlight: 	var(--cl-green-800);
 }
 
 :root {
